--- a/weather-app-kantun/Base.lproj/Main.storyboard
+++ b/weather-app-kantun/Base.lproj/Main.storyboard
@@ -8,37 +8,70 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
-        <scene sceneID="jpm-F4-AFJ">
+        <!--Cities View Controller-->
+        <scene sceneID="PYV-Db-0Os">
             <objects>
-                <tableViewController id="RBe-wL-nM7" customClass="CitiesViewController" customModule="weather_app_kantun" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="GGe-0c-jZj">
+                <viewController id="huS-4I-vlq" customClass="CitiesViewController" customModule="weather_app_kantun" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="a9d-Li-Cy4">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CityCell" id="6G6-Q1-bLf">
-                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6G6-Q1-bLf" id="Fsg-Va-Mrs">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="1Du-Gz-dfV">
+                                <rect key="frame" x="0.0" y="149" width="393" height="510"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CityTableViewCell" rowHeight="59" id="1Ue-do-QvL" customClass="CityTableViewCell" customModule="weather_app_kantun" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="59"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1Ue-do-QvL" id="8sB-yJ-X2s">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="59"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3u-o8-Mag">
+                                                    <rect key="frame" x="45" y="9" width="195" height="42"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="location.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="n8F-ZW-XkW">
+                                                    <rect key="frame" x="7" y="17" width="27" height="29"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="cityLabel" destination="p3u-o8-Mag" id="UBq-Om-ef2"/>
+                                            <outlet property="locationIconImage" destination="n8F-ZW-XkW" id="b8F-eb-okO"/>
+                                            <segue destination="wQd-uh-YCb" kind="show" identifier="showDetail" id="Q1N-ZU-q1h"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ad4-hb-byV">
+                                <rect key="frame" x="138" y="696" width="117" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="My Location"/>
                                 <connections>
-                                    <segue destination="wQd-uh-YCb" kind="show" identifier="showDetail" id="Sr8-tT-Gny"/>
+                                    <action selector="handleLocationButtonTap:" destination="huS-4I-vlq" eventType="touchUpInside" id="utD-hw-Uqk"/>
                                 </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="RBe-wL-nM7" id="UAb-N6-k8B"/>
-                            <outlet property="delegate" destination="RBe-wL-nM7" id="e9I-bc-ycm"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="7pw-tC-H2P"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fH9-rN-XMX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="OUb-kb-6ue"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="L7R-r0-diP"/>
+                    <connections>
+                        <outlet property="citiesTableView" destination="1Du-Gz-dfV" id="pnl-VX-SlH"/>
+                        <outlet property="currentLocationButton" destination="Ad4-hb-byV" id="XXK-61-AsO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NTF-u7-BkQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="924.4274809160305" y="-118.30985915492958"/>
+            <point key="canvasLocation" x="890.83969465648852" y="-118.30985915492958"/>
         </scene>
         <!--Weather Details View Controller-->
         <scene sceneID="Dvq-TM-86S">
@@ -55,6 +88,9 @@
                                     <segment title="°C"/>
                                     <segment title="°F"/>
                                 </segments>
+                                <connections>
+                                    <action selector="temperatureUnitChanged:" destination="wQd-uh-YCb" eventType="valueChanged" id="urn-bQ-ikx"/>
+                                </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Nhl-wA-nRE">
                                 <rect key="frame" x="90" y="200" width="213" height="47"/>
@@ -148,7 +184,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="RBe-wL-nM7" kind="relationship" relationship="rootViewController" id="BPg-nH-CVX"/>
+                        <segue destination="huS-4I-vlq" kind="relationship" relationship="rootViewController" id="iZq-f9-17n"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WyE-WI-dhe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -164,13 +200,52 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryCell" id="Ig4-vo-Tzz">
-                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryCell" rowHeight="55" id="Ig4-vo-Tzz" customClass="HistoryCell" customModule="weather_app_kantun" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="55"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ig4-vo-Tzz" id="Y2u-rX-exm">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="55"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8S0-1E-gIX">
+                                            <rect key="frame" x="10" y="5" width="38.333333333333336" height="31"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SSB-md-ew5">
+                                            <rect key="frame" x="286" y="15" width="102" height="35"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DRx-en-IXz">
+                                            <rect key="frame" x="10" y="29" width="36" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="SSB-md-ew5" firstAttribute="top" secondItem="Y2u-rX-exm" secondAttribute="topMargin" constant="4" id="45E-pK-rTr"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="DRx-en-IXz" secondAttribute="bottom" constant="-2" id="67w-W8-R04"/>
+                                        <constraint firstItem="DRx-en-IXz" firstAttribute="top" secondItem="Y2u-rX-exm" secondAttribute="topMargin" constant="18" id="7u0-QM-Woa"/>
+                                        <constraint firstItem="SSB-md-ew5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DRx-en-IXz" secondAttribute="trailing" constant="8" symbolic="YES" id="HPY-4B-K3C"/>
+                                        <constraint firstItem="8S0-1E-gIX" firstAttribute="leading" secondItem="Y2u-rX-exm" secondAttribute="leadingMargin" constant="-10" id="KZQ-5o-5G6"/>
+                                        <constraint firstItem="SSB-md-ew5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8S0-1E-gIX" secondAttribute="trailing" constant="8" symbolic="YES" id="NA8-Lc-UUE"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="SSB-md-ew5" secondAttribute="trailing" constant="-15" id="OVS-yo-s2x"/>
+                                        <constraint firstItem="8S0-1E-gIX" firstAttribute="top" secondItem="Y2u-rX-exm" secondAttribute="topMargin" constant="-6" id="kkh-s0-S86"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="8S0-1E-gIX" secondAttribute="bottom" constant="8" id="lqD-QG-1O9"/>
+                                        <constraint firstItem="8S0-1E-gIX" firstAttribute="leading" secondItem="DRx-en-IXz" secondAttribute="leading" id="mTX-Jc-42R"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="SSB-md-ew5" secondAttribute="bottom" constant="-6" id="umc-T4-mBn"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="cityLabel" destination="8S0-1E-gIX" id="8Ec-gO-jHO"/>
+                                    <outlet property="containerView" destination="Y2u-rX-exm" id="ovQ-iD-iBf"/>
+                                    <outlet property="dateLabel" destination="DRx-en-IXz" id="X0n-pE-2v6"/>
+                                    <outlet property="tempLabel" destination="SSB-md-ew5" id="JeX-Pv-w9f"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -182,7 +257,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dIy-uF-NcW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-909" y="739"/>
+            <point key="canvasLocation" x="-909.16030534351137" y="738.73239436619724"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="XyV-Xg-F3B">
@@ -206,6 +281,7 @@
     </scenes>
     <resources>
         <image name="cloud" catalog="system" width="128" height="87"/>
+        <image name="location.fill" catalog="system" width="128" height="119"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
