--- a/weather-app-kantun/Base.lproj/Main.storyboard
+++ b/weather-app-kantun/Base.lproj/Main.storyboard
@@ -16,9 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="1Du-Gz-dfV">
-                                <rect key="frame" x="0.0" y="149" width="393" height="510"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="1Du-Gz-dfV">
+                                <rect key="frame" x="0.0" y="148" width="393" height="511"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -30,29 +29,29 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3u-o8-Mag">
-                                                    <rect key="frame" x="45" y="9" width="195" height="42"/>
+                                                    <rect key="frame" x="51" y="13" width="342" height="41"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="location.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="n8F-ZW-XkW">
-                                                    <rect key="frame" x="7" y="17" width="27" height="29"/>
+                                                    <rect key="frame" x="7" y="21" width="27" height="29"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="cityLabel" destination="p3u-o8-Mag" id="UBq-Om-ef2"/>
+                                            <outlet property="containerView" destination="8sB-yJ-X2s" id="S8k-jx-ABJ"/>
                                             <outlet property="locationIconImage" destination="n8F-ZW-XkW" id="b8F-eb-okO"/>
                                             <segue destination="wQd-uh-YCb" kind="show" identifier="showDetail" id="Q1N-ZU-q1h"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ad4-hb-byV">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ad4-hb-byV">
                                 <rect key="frame" x="138" y="696" width="117" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="My Location"/>
                                 <connections>
@@ -61,7 +60,14 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OUb-kb-6ue"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="1Du-Gz-dfV" firstAttribute="top" secondItem="OUb-kb-6ue" secondAttribute="top" constant="45" id="D6X-lz-iYq"/>
+                            <constraint firstItem="1Du-Gz-dfV" firstAttribute="leading" secondItem="a9d-Li-Cy4" secondAttribute="leading" id="PBg-pY-X9Z"/>
+                            <constraint firstItem="Ad4-hb-byV" firstAttribute="top" secondItem="1Du-Gz-dfV" secondAttribute="bottom" constant="37" id="RFZ-vV-Gdm"/>
+                            <constraint firstItem="Ad4-hb-byV" firstAttribute="centerX" secondItem="1Du-Gz-dfV" secondAttribute="centerX" id="aX1-hr-Vr6"/>
+                            <constraint firstItem="OUb-kb-6ue" firstAttribute="bottom" secondItem="Ad4-hb-byV" secondAttribute="bottom" constant="38" id="cHG-wH-y2r"/>
+                            <constraint firstItem="Ad4-hb-byV" firstAttribute="centerX" secondItem="a9d-Li-Cy4" secondAttribute="centerX" id="kq6-ei-pMj"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="L7R-r0-diP"/>
                     <connections>
@@ -157,7 +163,9 @@
                             <constraint firstItem="rFL-FS-XDg" firstAttribute="leading" secondItem="LSi-JF-5Wq" secondAttribute="leading" id="L2T-vR-pMd"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="ce4-Qx-bRo"/>
+                    <navigationItem key="navigationItem" id="ce4-Qx-bRo">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="sLL-IW-jp6"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="cityNameLabel" destination="Nhl-wA-nRE" id="kxt-xF-YNZ"/>
                         <outlet property="currentTempLabel" destination="LSi-JF-5Wq" id="zqe-KG-DRC"/>
@@ -191,36 +199,43 @@
             </objects>
             <point key="canvasLocation" x="17.557251908396946" y="-118.30985915492958"/>
         </scene>
-        <!--History Weather View Controller-->
+        <!--Weather History-->
         <scene sceneID="kDD-Li-oeu">
             <objects>
-                <tableViewController id="sae-mx-rms" customClass="HistoryWeatherViewController" customModule="weather_app_kantun" sceneMemberID="viewController">
+                <tableViewController title="Weather History" id="sae-mx-rms" customClass="HistoryWeatherViewController" customModule="weather_app_kantun" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="szh-Rf-A8V">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <label key="tableFooterView" hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No weather history yet." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LDO-Mq-f1u">
+                            <rect key="frame" x="0.0" y="185" width="393" height="398"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryCell" rowHeight="55" id="Ig4-vo-Tzz" customClass="HistoryCell" customModule="weather_app_kantun" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="50" width="393" height="55"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryCell" rowHeight="107" id="Ig4-vo-Tzz" customClass="HistoryCell" customModule="weather_app_kantun" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="107"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ig4-vo-Tzz" id="Y2u-rX-exm">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="55"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="107"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8S0-1E-gIX">
-                                            <rect key="frame" x="10" y="5" width="38.333333333333336" height="31"/>
+                                            <rect key="frame" x="10" y="5" width="38.333333333333336" height="83"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SSB-md-ew5">
-                                            <rect key="frame" x="286" y="15" width="102" height="35"/>
+                                            <rect key="frame" x="286" y="15" width="102" height="87"/>
                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DRx-en-IXz">
-                                            <rect key="frame" x="10" y="29" width="36" height="17"/>
+                                            <rect key="frame" x="10" y="29" width="36" height="69"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -240,6 +255,7 @@
                                         <constraint firstAttribute="bottomMargin" secondItem="SSB-md-ew5" secondAttribute="bottom" constant="-6" id="umc-T4-mBn"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="cityLabel" destination="8S0-1E-gIX" id="8Ec-gO-jHO"/>
                                     <outlet property="containerView" destination="Y2u-rX-exm" id="ovQ-iD-iBf"/>
@@ -254,6 +270,9 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" systemItem="history" id="XTB-fk-sTe"/>
+                    <connections>
+                        <outlet property="emptyStateLabel" destination="LDO-Mq-f1u" id="QaQ-hX-eGg"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dIy-uF-NcW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -267,7 +286,7 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ubn-sU-rHE">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="npu-UG-lvW" kind="relationship" relationship="viewControllers" id="Icj-au-QVv"/>
